--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
