--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "aos": "^3.0.0-beta.6",
+    "firebase": "^12.8.0",
     "lottie-react": "^2.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "sweetalert2": "^11.26.17",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.18"
   },
