--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.20",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.13.4",
     "firebase": "^12.8.0",
     "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
