--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0",
     "sweetalert2": "^11.26.17",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.18"
